--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "clarifai": "^2.8.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "clarifai": "^2.9.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-particles-js": "^2.3.0",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.4.3",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.11.1"
   },
